2005-08-16  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.12.modules: revert the gnome-mime-data removal,
	since gnome-vfs still uses it.

2005-08-16  James Henstridge  <james@jamesh.id.au>

	* jhbuild/frontends/tinderbox.py (get_distro): split out code for
	guessing distro details into a separate function. Enhance to use
	"lsb_release" tool to look up distro details, if available.  Fixes
	bug #313478.

	* modulesets/gnome-2.12.modules (libbtctl, gnome-bluetooth, phonemgr):
	add modules.  Patch from Jaap A. Haitsma, fixing bug #310674.

	* modulesets/gnutls.modules (libtasn1): update to 0.2.15.

	* modulesets/gnome26.modules: same here.

	* modulesets/gnome28.modules: same here.

	* modulesets/gnome-2.10.modules: same here.

	* modulesets/gnome-2.12.modules: reference gnutls.modules.

	* modulesets/gnutls.modules: move gnutls stuff to a separate
	.modules file, shared by the others.

	* modulesets/gnome-2.12.modules (libnotify): add libnotify.
	(gnome-power-manager): add libnotify as a dependency.  Patch from
	Jaap A. Haitsma, fixes bug #310598.

	* jhbuild/frontends/tinderbox.py: set the charset in the generated
	HTML.  This is based on a patch from Guillaume Desmottes.  Fixes
	bug #309977.

	* jhbuild/monkeypatch.py: add locale.getpreferredencoding() if
	missing.

2005-08-15  Elijah Newren  <newren@gmail.com>

	* modulesets/gnome-2.12.modules: yelp no longer depends on
	gtkhtml2, remove duplicate gdl entry, add evolution-exchange since
	it is in the desktop release

2005-08-13  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/freedesktop.modules: libpixman has been moved into
	cairo. Remove the dep from cairo and the module itself.

2005-08-13  Davyd Madeley  <davyd@madeley.id.au>

	* modulesets/gnome-2.12.modules: opencdk depends on libgcrypt. Thanks
	  again to James A.

2005-08-11  Davyd Madeley  <davyd@madeley.id.au>

	* modulesets/gnome-2.12.modules: gnome-doc-utils depends on intltool.
	  Patch from James Andrewartha <trs80@ucc.asn.au>.
