@@ -1,3 +1,9 @@
+2005-08-17  James Henstridge  <james@jamesh.id.au>
+
+	* jhbuild/utils/trayicon.py (TrayIcon._run_zenity): add back the
+	os.setsid() call that got lost when converting this code to use
+	the subprocess module.
+
 2005-08-16  Vincent Untz  <vuntz@gnome.org>
 
 	* modulesets/gnome-2.12.modules: revert the gnome-mime-data removal,
